--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ asgiref==3.7.2
 asn1crypto==1.5.1
 attrs==23.1.0
 billiard==3.6.4.0
+boto3==1.26.143
+botocore==1.29.143
 celery==5.2.7
 certifi==2023.5.7
 cffi==1.15.1
@@ -23,6 +25,7 @@ django-embed-video==1.4.8
 django-js-asset==2.0.0
 django-mptt==0.14.0
 django-redisboard==8.4.0
+django-storages==1.13.2
 django-taggit==4.0.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
@@ -30,6 +33,7 @@ Faker==18.9.0
 getsms==0.1
 html5lib==1.1
 idna==3.4
+jmespath==1.0.1
 kombu==5.2.4
 lxml==4.9.2
 oscrypto==1.3.0
@@ -52,6 +56,7 @@ qrcode==7.4.2
 redis==4.5.5
 reportlab==3.6.13
 requests==2.31.0
+s3transfer==0.6.1
 six==1.16.0
 sqlparse==0.4.4
 svglib==1.5.1
@@ -60,7 +65,7 @@ tinycss2==1.2.1
 typing_extensions==4.6.2
 tzlocal==5.0.1
 uritools==4.0.1
-urllib3==2.0.2
+urllib3==1.26.16
 vine==5.0.0
 wcwidth==0.2.6
 webencodings==0.5.1
