--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cryptography==41.0.0
 cssselect2==0.7.0
 Django==4.2.1
 django-ckeditor==6.5.1
+django-cors-headers==4.0.0
 django-crispy-forms==2.0
 django-debug-toolbar==4.1.0
 django-embed-video==1.4.8
